--- a/3eme project/style.css
+++ b/3eme project/style.css
@@ -11,11 +11,12 @@
   @media (max-width: 600px) {
    width: 100%;
       position: relative;
+  }
    
     #navbar {
       width: 100%; 
       position: relative;
-      body {
+    }
     
     body{
       font-family: Arial, sans-serif;
