--- a/4eme project/styles.css
+++ b/4eme project/styles.css
@@ -1,13 +1,13 @@
 #nav-bar {
-    display: flex;
+    display:inline-flex;
     align-items: center;
-    justify-content: space-between;
-    position: sticky;
+    justify-content:space-evenly;
+    position:static;
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
-    background-color: rgba(255, 255, 255, 0.9);
+    height: 100%;
+    background-color: rgb(255, 255, 255);
     z-index: 1;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -42,7 +42,7 @@
         flex-direction: column;
         height: auto;
         text-align: center; 
-        list-style-type: none;
+        
     }
     .logo {
         margin-bottom: 10px;
