--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,10 +1,10 @@
 /* Global font settings */
 * {
-    font-family: Arial, sans-serif; /* Utilisation d'une police sans-serif basique */
+    font-family: Arial, sans-serif; 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 16px; /* Taille de police par défaut */
+    font-size: 16px;
 }
 
 /* Navbar */
@@ -131,7 +131,11 @@ font-size: 50px;
 .project-tile img {
     width: 100%;
     height: auto;
+    max-height: 400px;
     display: block;
+    object-fit: cover; 
+    margin-bottom: 5%;
+    border-radius: 1%;
 }
 
 button.prev, button.next {
@@ -155,15 +159,20 @@ button.next {
 }
 
 /* Services section styles */
-.section-icons {
-    margin-top: 20px;
-    margin-bottom: 20px;
+
+#services {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#section-icons {
+    margin-top: 50px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
 }
 
-.section-icons > div {
+#section-icons > div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,24 +180,24 @@ button.next {
     margin: 0 10px;
 }
 
-.section-icons i {
+#section-icons i {
     font-size: 2.5rem;
     margin-bottom: 10px;
     color: #3498db;
 }
 
-.section-icons h1 {
+#section-icons h1 {
     margin: 0;
     font-size: 1.5rem;
     color: #2c3e50;
 }
 
-.section-icons p {
+#section-icons p {
     margin: 5px 0 0;
     color: #7f8c8d;
 }
 /*footer*/
-.footer {
+#footer {
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -247,4 +256,63 @@ button.next {
     .footer-item {
         margin-bottom: 10px;
     }
+}
+
+/* Curriculum Vitae section */
+#my_cv {
+    padding: 50px 0;
+    text-align: center;
+    background-color: #f4f6f7;
+    color: #2c3e50;
+    width: 100%;
+    height: 100%;
+}
+
+#my_cv .picture_CV {
+    display: inline-block;
+    position: relative;
+    width: 80%;
+    max-width: 600px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+#my_cv .picture_CV:hover {
+    transform: scale(1.05);
+}
+
+#my_cv h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    margin-top: -2%;
+    position: absolute;
+    color: #3498db;
+}
+
+#my_cv a {
+    display: block;
+    margin-top: 20px;
+    color: #3498db;
+    font-size: 1.2rem;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+#my_cv a:hover {
+    color: #2980b9;
+}
+
+#my_cv img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+#my_cv img:hover {
+    transform: scale(1.05);
 }
