--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -7,6 +7,10 @@
     font-size: 16px;
 }
 
+body{
+    font-family: Arial, sans-serif; 
+}
+
 /* Navbar */
 nav {
     position: fixed;
@@ -107,6 +111,7 @@ font-size: 50px;
     margin-top: 10pxs;
     margin-bottom: 10px;
     font-size: 2rem;
+    color:#f0f0f0;
 }
 
 /* Carousel */
@@ -150,6 +155,9 @@ button.prev, button.next {
     z-index: 1;
 }
 
+.project-tile h3{
+    color: #f0f0f0;
+}
 button.prev {
     left: 10px;
 }
@@ -285,11 +293,12 @@ button.next {
 }
 
 #my_cv h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    margin-top: -2%;
-    position: absolute;
-    color: #3498db;
+    font-size: 50px;
+    margin-bottom: 4%;
+    margin-top: 0%;
+    position: relative;
+    color: #000000;
+    font-family: Arial, sans-serif; 
 }
 
 #my_cv a {
